<resources>
    <string name="app_name">LitList</string>
    <string name="title_activity_maps">Map</string>
    <string name="blank_fragment">Unimplemented!</string>
    <string name="sign_in_background">Sign in background</string>
    <string name="sign_in_with_spotify">Sign in with Spotify</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_a_playlist">Join a playlist</string>
    <string name="start_exploring">Start exploring</string>
    <string name="map_message">Join a playlist!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_button">Login with Spotify</string>
    <string name="cover_art_description">Cover Art</string>
    <string name="search_hint">Search</string>
    <string name="search_activity_title">Search</string>

    <string-array name="alert_types">
        <item>Ring</item>
        <item>Vibrate</item>
        <item>No Alert</item>
    </string-array>

    <!--Playlist-->
    <string name="addSong">ADD</string>
    <string name="search_button">SEARCH</string>
    <!--Setting-->
    <string name="prefs_group_profile">Profile</string>
    <string name="prefs_group_preferences">Preferences</string>
    <string name="prefs_group_miscellaneous">Miscellaneous</string>

    <string name="prefs_name_key">Name</string>
    <string name="prefs_signout_key">Signout</string>
    <string name="prefs_alert_key">alert</string>

    <string-array name="prefs_alert_entries">
        <item>Vibrate</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="prefs_alert_entryValues">
        <item>v</item>
        <item>n</item>
    </string-array>

    <string name="prefs_QR_key">QR Code</string>
    <string name="prefs_about_key">About US</string>
    <string name="alert_type">Alert type</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_creator">Playlist creator</string>
    <string name="join">Join</string>
    <string name="zoom_level">Zoom level</string>
    <string name="alert_type_text">Alert type</string>
    <string name="alert_on_text">Alerts enabled</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="click_markers_prompt">Click on a marker to view a playlist.</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="new_playlist_name">Playlist name:</string>
    <string name="new_playlist_name_hint">Playlist name</string>
    <string name="new_playlist_tag">Genre tag:</string>
    <string name="new_playlist_tag_hint">Genre tag</string>
    <string name="public_playlist_text">Public playlist</string>
    <string name="new_playlist_display_name">User display name:</string>
    <string name="new_playlist_display_name_hint">Display name</string>
    <string name="listeners">Listeners</string>
    <string name="creator">Creator</string>
    <string name="playlist">Playlist</string>
    <string name="mute">Mute</string>
    <string name="song_search_image">Search button</string>

</resources>
