<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wabalub.cs65.litlist.CreatePlaylistActivity">

    <TextView
        android:id="@+id/new_playlist_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:shadowColor="@color/black"
        android:text="@string/create_new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/new_playlist_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/new_playlist_name"/>
            <EditText
                android:id="@+id/new_playlist_name_edit_text"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/new_playlist_name_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/new_playlist_display_name"/>
            <EditText
                android:id="@+id/new_playlist_creator_edit_text"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/new_playlist_display_name_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/new_playlist_tag"/>
            <EditText
                android:id="@+id/new_playlist_tag_edit_text"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/new_playlist_tag_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/public_playlist_text"/>
            <Switch
                android:id="@+id/public_private_switch"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:onClick="onCreateClicked"
            android:text="Create"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
